# DECADE

./: .gitignore  Idea.md  README.md  pyproject.toml
config/: default.yaml
decade/: __init__.py
decade/data/: __init__.py  load.py
decade/dynamics/: __init__.py  infection.py
decade/graph/: __init__.py  loader.py  topology.py
decade/metrics/: __init__.py  cascade.py
decade/policies/: __init__.py  base.py  centrality.py  degree.py  random_.py
decade/run/: __init__.py  experiment.py  sensitivity.py
scripts/: run_policy_comparison.py  run_sensitivity.py
tests/: test_dynamics.py  test_metrics.py  test_policies.py
z_PM (sync Linear)/: AI-plan.md  DEC-21-assessment.md
