[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decade"
version = "0.1.0"
description = "Controlled lab for cascade and robustness in dependency networks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
data = ["networkx", "pandas"]
plot = ["matplotlib", "seaborn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decade*"]
